# 0-programme

./: .gitignore  AGENTS.md  CITATION.cff  CROSS_PAPER_CONVENTIONS.md  CURRENT_STATUS.md  DEPENDENCIES.md  GLOBAL_CLAIMS.md  GLOBAL_DECISION_LOG.md  GLOBAL_GATES.md  HANDOFF.md  LICENSE  MASTER_PROGRESS.md  MASTER_ROADMAP.md  Makefile  PAPER_MAP.md  README.md  SYNC_STATUS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: cross-paper-gate.yml  programme-decision.yml  synchronization.yml
.github/workflows/: ci.yml
archive/: README.md
docs/: CROSS_PAPER_GATE_POLICY.md  PROGRAMME_STATE.md  RESEARCH_WORKFLOW.md  RESULT_STATUS_POLICY.md  SYNC_POLICY.md
handoffs/: README.md
papers/: README.md  paper1.md  paper2.md  paper3.md  paper4.md  paper5.md
programme/: CRITICAL_PATH.md  FAILURE_REGISTER.md  ONTOLOGY.md  THEORY_MAP.md  VISION.md
reports/: 2026-07-21_programme-state-landing_report.md
reviews/: PROG-SYNC-01.md  README.md
sea-ice/: SEA_ICE_PHYSICAL_FRAMEWORK.md  SEA_ICE_PREREGISTRATION_POLICY.md  SEA_ICE_RESEARCH_MAP.md
tests/: README.md  test_programme_state_guard.py  test_register_integrity.py  test_repository_structure.py
