[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "programme-control-centre"
version = "0.1.0"
description = "Infrastructure checks for the 0-programme coordination repository"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zeta Cheng" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.11,<1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
